file expired_at field addition experiments

--- a/src/styles/components/file_content.scss
+++ b/src/styles/components/file_content.scss
@@ -709,3 +709,20 @@
         display: none;
     }
 }
+
+.expired__row {
+
+	@media (max-width:780px) {
+		display: none;
+	}
+
+	@media (max-width: $desktop-breakpoint) {
+        
+        display: none;
+    }
+}
+
+.expired__row__active {
+	color: red;
+	font-weight: 700;
+}
